# ChangeLog for app-emulation/libguestfs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/libguestfs/ChangeLog,v 1.39 2014/12/19 04:44:14 dlan Exp $

*libguestfs-1.28.5 (19 Dec 2014)

  19 Dec 2014; Yixun Lan <dlan@gentoo.org> +libguestfs-1.28.5.ebuild:
  version bump, solved ocaml dep, bug 532698, thanks Richard Jones

*libguestfs-1.28.3 (05 Dec 2014)

  05 Dec 2014; Maxim Koltsov <maksbotan@gentoo.org>
  +files/1.28/0000_bug_499150.patch,
  +files/1.28/0001_add_gentoo_names_to_configure.patch,
  +files/1.28/0002_add_gentooway_to_remove_la_files.patch,
  +files/1.28/0005_enable_gtk_docs_in_broken_autotools-utils-eclass.patch,
  +files/1.28/0103_disable_php_bindings_makefile.patch,
  +libguestfs-1.28.3.ebuild, -libguestfs-1.24.0.ebuild:
  Bump to 1.28.3, clean old. Thanks to slepnoga.

  17 Nov 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  libguestfs-1.24.0.ebuild, libguestfs-1.26.1.ebuild:
  Replace fixlocalpod with perl_delete_localpod

  08 Nov 2014; Mike Frysinger <vapier@gentoo.org>
  +files/1.26/0020_all_qemu_configure.patch:
  Fix from upstream for building w/newer qemu #528386 by Reuben Martin.

*libguestfs-1.26.1 (01 May 2014)

  01 May 2014; Maxim Koltsov <maksbotan@gentoo.org>
  +files/1.26/0000_bug_499150.patch,
  +files/1.26/0001_add_gentoo_names_to_configure.patch,
  +files/1.26/0002_add_gentooway_to_remove_la_files.patch,
  +files/1.26/0005_enable_gtk_docs_in_broken_autotools-utils-eclass.patch,
  +files/1.26/0103_disable_php_bindings_makefile.patch,
  +libguestfs-1.26.1.ebuild:
  Bump to 1.26.1

  08 Mar 2014; Mikle Kolyada <zlogene@gentoo.org>
  -files/1.20/0001_add_gentoo_names_to_configure.patch,
  -files/1.20/0002_add_gentooway_to_remove_la_files.patch,
  -files/1.20/0003_add_doc_more_option.patch,
  -files/1.20/0004_add_icoutils_configure_drop_automagic.patch,
  -files/1.20/0005_enable_gtk_docs_in_broken_autotools-utils-eclass.patch,