@@ -23,23 +23,14 @@ DIST libguestfs-1.28.3.tar.gz 12701662 SHA256 082ebcb14156198e73b3f64249d4a9fcf9
 DIST libguestfs-1.28.5.tar.gz 12747537 SHA256 e9f38c6ad15cefe18b096a86334a60fc7df6367358f2641d8c5c5f3122ad9d91 SHA512 5ab25498fa9141950c1077cc52bae05a2781fa86a983b5fa49fbd4a4bca70710db3d4f7b9f45fb6f8b4ee8e3d77ffde7c4c0d9e9e526443e2a8251a62306ebb6 WHIRLPOOL cbbac5cce87dd41ad05b13732d0f5a3442c980152d8864522f5df47ffed7a260a131c819ceb40edd07cd74454fc9f4c0c7eb41fe734509a4e123d28bc58d813f
 EBUILD libguestfs-1.26.1.ebuild 3702 SHA256 f04ddb32f9df6c523437eadc30c4b58c0fcd038aa0e2f75d7acfc1f7dda959db SHA512 eb743a980413d920f7b03f6304948466558a220c7e4d2e967bd308ff42bb1b07a4356b0470899754f6b19c032242a334878f50534faa30340b1dc2dba3b32ca2 WHIRLPOOL f2dd4d8fb276a463735992cdf2b2b202565a761a2eb14d476372f8d6334a15be84f0b76255512fd0f3cc0904f9a39095a7689697e9c43f7e44d3febe3b3d1d56
 EBUILD libguestfs-1.28.3.ebuild 3913 SHA256 04713262130794d9605393d03ae1ffe997e8eaa309426003ba83fbdbdb600670 SHA512 89e2bd685075b20672e355bf65724c22ed337c5413e8847b2f183dc7c9ea64c4b97cac88fe4eb7ba61ebf6db9de464710241f699cd0cc2497026099dd1098b89 WHIRLPOOL dde13e9ec87c5cc66a63a39ee41628101c226cbd2d41d84dce68792b9b0ce8c8f8e78c561dd83402b44713649036242591bc7266cedbf9de2182b53499b26a88
+EBUILD libguestfs-1.28.5-r1.ebuild 4109 SHA256 e2ba2507ec5f4c079390fdb0021dde1d216f866e38427ac9142681b3446fde5f SHA512 0b861cc38a1de70dd9195c05744af8acc9deed7c178e1f6c57758c95df1eecfafe36f31fd1311832d2ce96d416fc2d3826c6368b7b3c402e58605aebe9c2a696 WHIRLPOOL 38e38c159304da82a5e8edca2f74eb46d69db9b9441cb0e7194d49e8bb2aaa592c42a5a0f021a28758af8db6f73522f8144b38978d398e1c730197902ca895ea
 EBUILD libguestfs-1.28.5.ebuild 3908 SHA256 9cad4142adaafde2872aeb88d4cc58e59623f096fee94c7a88fff6fef8bde989 SHA512 77ec6fdf3ad8af399aaf0421d6c526a8f984003add3b9f8cf94a712c3711b0721939d3e392e23532653ae25f3f66b3e33c8e601b66d429b9e1ff5775a94570de WHIRLPOOL a4bf5f313a551a17f7da50ba56c99bc99a872ca1db83cfff581d26d714dc27c8634ee321f2cc3094ac88c1942cc3b8f1a4dc964b7a2473c20acefa0c815383bc
-MISC ChangeLog 19033 SHA256 4ca84e442bdd11e0661d248e249cc0349c5f97fcca58312fec7a570b53bd7503 SHA512 b84ffa6bd9b89c6b24d517887e5319621d3abdc9aa23f9ef5badf9de853b55055557d6ca02412e98f0aa658f04ee48bc003c898d6f850b8c372f51f0c307f9d8 WHIRLPOOL 221336e6e18b3d5d448c39e877edd6e9c91734116fe7192d1086b86036df070b72964696af0271d7f13c4731f839edf04248264cbf0015817c3a1a7ed0038fbf
+MISC ChangeLog 19252 SHA256 fb27331cad753f36713e9c0a558192f34e52b5d07c674e010f37d74ef830de13 SHA512 de5d2ab5bf569d27d55b2c77e35208c429c2bcc61c1c60dce7774b9774bf93ca6ddd7161acd69778e20ebbeb4aa4c3717a28d409480440a11081437f23682800 WHIRLPOOL 1cc7d6dab1c3696e7a327284b52ad92045a3e1f4a20ee4c854d556527d1f2bb9b2165f7e3ac6798b25a6886026ff6349a2b350ed93d98b882e8f96a8f30b78a7
 MISC metadata.xml 1104 SHA256 608f76ad5aa195e6992e84c760b290d7a125d29c1b59c5531301da36e41e10af SHA512 17807bb807f9651bd2cb40c7f0b3d10329baff4f9026c973f4668fb2d2e046cb16a5c2f5d38cd6a1d3d2bd6b0e02cda1209aa484de90e914f127b63a0bd54c6d WHIRLPOOL f13ff36105bdd7a9093cc139e0eaa079f5693187c0306fb5e1b580341176291e04405c69dd4a7c4c6ceac8454f9356cb2537b7ce7518588d345ae8c35e39283e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUk60tAAoJEJIMDbyqvv1VQ/YP/19x+nr8iotAjVonJDkExkUP
-4Q6iv2JFbPBBSy/DajQ3RJRX3qQimBmEKR9haCVbPitATV1LrU+Xf958ibm9JNQr
-TO9+ciiaiJdIaYsm4DfNnXkr/5iC2oRSdq5Hrgu020c/guDE/cX9GtLgZU4KTQIM
-N14Q1SczrijIuT0e6CAs6F3JxTGv2vUcILJKhHV8AvTKjeTVdJBWLG6Hgw2h57/j
-uBHq/Xa+lsqJbuxHcydvGqjfA0p7JVrHNM140MXUlhEmU5yqH5REOV3TRNxlfDZw
-bYzN6IBWQYMmSb67U+dD+DXuJo2efpnhY2bfVIatfJeTM8AVqWMRqIhGBhNLd5K9
-jSfvjsEDNt0a2sCmEGztlv4Kb+BcfsRR1EQf8yalNNKwK9t5pm+Xs/lMw4i3bLmr
-KNQXLSdwIiY4Hmx3InJTPT8rxdi0deOciC9Y/QVR/Vbd5EPEl2XZKpOTXEmbMNas
-ij4cavP+xG1IDgP9X657oNfLHsXEjJdKN/jSKgSl08BHm4ONulm2V/qa2jaZs0gZ
-DpcL+1jv6bt0D+z5ekf0jmsYDIEp8OYV4Icb30tInjTvAxOfYjlEMyLC/ENxSPUm
-ePsD7q+ICSSD9cuPwApkFewPEvqWruDlZ4BTSLimvdl5CZABXmVGsk8NFtDtT8kq
-eN09nBvLMJHoQ0/AWo8b
-=FPqb
+iEYEAREIAAYFAlWtgIQACgkQsAvGakAaFgBh9gCfVgn/VWgyY93P3jYHvfQIGD1C
+gEQAn0DXZoCCzazaR1bvkKq04h/faF/0
+=cj5M
 -----END PGP SIGNATURE-----
